array.island.Island.scala.error
Compilation error:
Island:4: error: identifier expected but integer literal found.
  last=num[0]
           ^Island:5: error: ']' expected but ';' found.
  for (curseur <- num){
^