array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var compteur=0
  last=num[0]
  for (curseur <- num){
    if (curseur>last) 
      compteur+=1
    last=curseur
  }
}